--- a/index.html
+++ b/index.html
@@ -1,1 +1,22 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Fancy Cards</title>
 
+    <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+    <div class="container">
+        <main>
+            <header>
+                <h1>FANCY CARDS</h1>
+            </header>
+             Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque fugiat fuga repellat quibusdam, veritatis dolore perspiciatis dignissimos harum nam enim dolor accusantium earum incidunt vitae nulla aliquam quia soluta commodi.
+        </main>
+    </div>
+    <script src="js/script.js"></script>
+</body>
+</html>
